--- a/package.json
+++ b/package.json
@@ -52,23 +52,24 @@
     "url": "https://github.com/bananafishM/react-image-viewer-zoom/issues"
   },
   "dependencies": {
-    "@types/react": "^15.0.14",
-    "@types/react-dom": "^0.14.23",
-    "typescript": "^2.2.1"
+    "@types/react": "15.0.14",
+    "@types/react-dom": "0.14.23",
+    "prop-types": "15.7.2",
+    "typescript": "2.2.1"
   },
   "description": "A React-based image viewer.",
   "devDependencies": {
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.3.2",
-    "css-loader": "^0.26.2",
-    "html-loader": "^0.4.5",
-    "mocha": "^3.2.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "source-map-loader": "^0.1.6",
-    "style-loader": "^0.13.2",
-    "ts-loader": "^2.0.1",
-    "webpack": "^2.2.1",
+    "babel-core": "6.23.1",
+    "babel-loader": "6.3.2",
+    "css-loader": "0.26.2",
+    "html-loader": "0.4.5",
+    "mocha": "3.2.0",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "source-map-loader": "0.1.6",
+    "style-loader": "0.13.2",
+    "ts-loader": "2.0.1",
+    "webpack": "2.2.1",
     "webpack-dev-server": ">=3.1.11"
   },
   "directories": {},
